added archiving capability

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,6 +21,12 @@ http {
     # ssl_certificate /etc/ssl/certs/streamer.example.com.crt;
     # ssl_certificate_key /etc/ssl/private/streamer.example.com.key;
 
+    location /recordings {
+     allow all;
+     autoindex on;
+     root /usr/local/nginx/html;
+    }
+
     # Configure HLS playback
     location /hls {
       add_header Cache-Control no-cache;
@@ -53,6 +59,8 @@ rtmp {
       hls_path /tmp/hls; # Where to write HLS files
       hls_fragment 5s;
       hls_playlist_length 20s;
+      record all;
+      record_path /usr/local/nginx/html/recordings;
     }
   }
 }
