can now also upload to youtube, but not conditionally

--- a/nginx.conf
+++ b/nginx.conf
@@ -61,6 +61,8 @@ rtmp {
       hls_playlist_length 20s;
       record all;
       record_path /usr/local/nginx/html/recordings;
+      record_suffix -%Y%m%d_%H%M%S.flv;
+      push rtmp://a.rtmp.youtube.com/live2/3avw-v5jr-r7wq-a1ay;
     }
   }
 }
